--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
     top: 50%;
     left: 50%;
     transform-origin: 0% 0%;
+    clip-path: polygon(0 0, 100% 0, 0 100%);
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
   }
   .odd {
@@ -111,12 +112,12 @@ for (let i=1; i<=8; i++) {
   guessEl.appendChild(opt);
 }
 
-// Create wheel slices
+// Create proper pie slices
 for (let i=0; i<8; i++) {
   const slice = document.createElement('div');
   slice.classList.add('slice');
   slice.classList.add((i+1)%2 === 0 ? 'even' : 'odd');
-  slice.style.transform = `rotate(${45*i}deg) skewY(-45deg)`;
+  slice.style.transform = `rotate(${45*i}deg) skewY(0deg)`;
   slice.textContent = i+1;
   wheel.appendChild(slice);
 }
